# WeatherStation

./: .gitignore  CMakeLists.txt  main.c  make_cmake.sh  run.bat
bme280/: bme280_defs.h  bme280_user.c  bme280_user.h
common/: definitions.h  runtime_info.h  settings.h
i2c/: i2c.c  i2c.h
lcd/: lcd.c  lcd.h
spi/: spi.c  spi.h
